Fix item icon clipping in trailpass tab

--- a/code/UI/Menu/TrailPass/TrailpassTab.scss
+++ b/code/UI/Menu/TrailPass/TrailpassTab.scss
@@ -110,7 +110,7 @@ TrailPassItemIcon {
   margin-right: 24px;
   flex-direction: column;
   align-items: center;
-  padding: 32px;
+  padding: 24px;
 
   &:last-child {
     margin-right: 0;
@@ -194,8 +194,8 @@ TrailPassItemIcon {
   }
 
   .thumbnail {
-    width: 100%;
-    height: 100%;
+    width: 175px;
+    height: 175px;
     flex-grow: 1;
     
     cursor: pointer;
